--- a/about.html
+++ b/about.html
@@ -418,6 +418,6 @@
         </div>
     </footer>
 
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
