--- a/portfolios.html
+++ b/portfolios.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolios - The Big Day Co.</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/portfolios.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="portfolios.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -292,7 +292,7 @@
         </div>
     </footer>
 
-    <script src="scripts/main.js"></script>
-    <script src="scripts/portfolios.js"></script>
+    <script src="main.js"></script>
+    <script src="portfolios.js"></script>
 </body>
 </html>
